--- a/src/main/resources/assets/wet-sand/lang/en_us.json
+++ b/src/main/resources/assets/wet-sand/lang/en_us.json
@@ -1,11 +1,11 @@
 {
-	"block.wet-sand.moist_sand": "Moist sand",
-	"block.wet-sand.wet_sand": "Wet sand",
-	"block.wet-sand.soaked_sand": "Soaked sand",
-	"block.wet-sand.moist_suspicious_sand": "Moist suspicious sand",
-	"block.wet-sand.wet_suspicious_sand": "Wet suspicious sand",
-	"block.wet-sand.soaked_suspicious_sand": "Soaked suspicious sand",
-	"block.wet-sand.moist_red_sand": "Moist red sand",
-	"block.wet-sand.wet_red_sand": "Wet red sand",
-	"block.wet-sand.soaked_red_sand": "Soaked red sand"
+	"block.wet-sand.moist_sand": "Moist Sand",
+	"block.wet-sand.wet_sand": "Wet Sand",
+	"block.wet-sand.soaked_sand": "Soaked Sand",
+	"block.wet-sand.moist_suspicious_sand": "Moist Suspicious Sand",
+	"block.wet-sand.wet_suspicious_sand": "Wet Suspicious Sand",
+	"block.wet-sand.soaked_suspicious_sand": "Soaked Suspicious Sand",
+	"block.wet-sand.moist_red_sand": "Moist Red Sand",
+	"block.wet-sand.wet_red_sand": "Wet Red Sand",
+	"block.wet-sand.soaked_red_sand": "Soaked Red Sand"
 }
